# quality-api-case

Documents/Programming/itt-cicd-case-project-main/: .gitignore  CMakeLists.txt
Documents/Programming/itt-cicd-case-project-main/src/: main.cpp  quality_service.cpp
Documents/Programming/itt-cicd-case-project-main/tests/: quality_service_test.cpp
Documents/Programming/itt-cicd-case-project-main/web/: index.html
